--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,25 @@ body a {
     -ms-transition: 0.5s all;
 }
 
+
+.rowtri{
+    display: flex;
+    justify-content: space-between;
+}
+.tri1,.tri2,.tri3{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 2);
+}
+
+.subtri{
+    margin-top: 30px;
+}
+.tri2{
+    margin-left: 30px;
+}
+.tri3{
+    margin-left: 30px;
+}
+
 .triDharma {
     margin-top: -90px;
     margin-bottom: 60px;
@@ -1702,5 +1721,10 @@ button.btn-cont-w3 {
     width: 50px;
 }
 
-
+.triDharma{
+    font-family: Poppins,sans-serif;
+    font-size: 30px;
+    font-weight: bold;
+    color: #212529;
+}
 /* //responsive */
