--- a/css/style.css
+++ b/css/style.css
@@ -1,122 +1,106 @@
-#loading{
+/* Center the loader */
+
+#loader {
+
     position: absolute;
-    left: 45%;
-    top:45%;
-}
-
-#loading span{
-    position: absolute;
-    display: block;
-    height: 20px;
-    width: 20px;
-    background: #1eff00;
-}
-
-#loading span:nth-child(1){
-    background: #54acd2;
-    transform: none;
-    animation: loading_1 3s infinite ease-in-out;
-}
-#loading span:nth-child(2){
-    background: #f18d05;
-    transform: none;
-    animation: loading_2 3s infinite ease-in-out;
-}
-#loading span:nth-child(3){
-    background: #e14a39;
-    transform: none;
-    animation: loading_3 3s infinite ease-in-out;
-}
-#loading span:nth-child(4){
-    background: #1bbc9b;
-    transform: none;
-    animation: loading_4 3s infinite ease-in-out;
-}
-
-@keyframes loading_1{
-    25%{
-        transform: translateX(40px);
+    
+    left: 50%;
+    
+    top: 50%;
+    
+    z-index: 1;
+    
+    width: 150px;
+    
+    height: 150px;
+    
+    margin: -75px 0 0 -75px;
+    
+    border: 16px solid #f3f3f3;
+    
+    border-radius: 50%;
+    
+    border-top: 16px solid #3498db;
+    
+    width: 120px;
+    
+    height: 120px;
+    
+    -webkit-animation: spin 2s linear infinite;
+    
+    animation: spin 2s linear infinite;
+    
     }
-    50%{
-        transform: translateX(40px) translateY(40px); 
+    
+    
+    
+    @-webkit-keyframes spin {
+    
+    0% { -webkit-transform: rotate(0deg); }
+    
+    100% { -webkit-transform: rotate(360deg); }
+    
     }
-    75%{
-        transform: translateY(40px);
+    
+    
+    
+    @keyframes spin {
+    
+    0% { transform: rotate(0deg); }
+    
+    100% { transform: rotate(360deg); }
+    
     }
-    100%{
-        transform: none;
+    
+    
+    
+    /* Add animation to "page content" */
+    
+    .animate-bottom {
+    
+    position: relative;
+    
+    -webkit-animation-name: animatebottom;
+    
+    -webkit-animation-duration: 1s;
+    
+    animation-name: animatebottom;
+    
+    animation-duration: 1s
+    
     }
-}
-@keyframes loading_2{
-    25%{
-        transform: translateX(40px);
+    
+    
+    
+    @-webkit-keyframes animatebottom {
+    
+    from { bottom:-100px; opacity:0 }
+    
+    to { bottom:0px; opacity:1 }
+    
     }
-    50%{
-        transform: translateX(40px) translateY(40px); 
+    
+    
+    
+    @keyframes animatebottom {
+    
+    from{ bottom:-100px; opacity:0 }
+    
+    to{ bottom:0; opacity:1 }
+    
     }
-    75%{
-        transform: none;
+    
+    
+    
+    #myDiv {
+    
+    display: none;
+    
     }
-    100%{
-        transform: translateX(40px);
-    }
-}
-@keyframes loading_3{
-    25%{
-        transform: translateX(40px);
-    }
-    50%{
-        transform: none ; 
-    }
-    75%{
-        transform: translateY(40px);
-    }
-    100%{
-        transform: translateX(40px) translateY(40px);
-    }
-}
-@keyframes loading_4{
-    25%{
-        transform:none;
-    }
-    50%{
-        transform: translateX(40px) translateY(40px); 
-    }
-    75%{
-        transform: translateY(40px);
-    }
-    100%{
-        transform: translateY(40px);
-    }
-}
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    
 
 body {
     padding: 0;
