Update Tri dharma Box Shadow
Warna shadow yang sebelumnya hitam diganti jadi abu" agar sesuai dengan box shadow yang lain.

--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@
 
 
 
-    
+
 
 body {
     padding: 0;
@@ -142,7 +142,7 @@ body a {
     justify-content: space-between;
 }
 .tri1,.tri2,.tri3{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 2);
+    box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
 }
 
 .subtri{
