--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,100 @@
+/* Center the loader */
+
+#loader {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 1;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border: 16px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 16px solid #3498db;
+    width: 120px;
+    height: 120px;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+    0% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+/* Add animation to "page content" */
+
+.animate-bottom {
+    position: relative;
+    -webkit-animation-name: animatebottom;
+    -webkit-animation-duration: 1s;
+    animation-name: animatebottom;
+    animation-duration: 1s
+}
+
+@-webkit-keyframes animatebottom {
+    from {
+        bottom: -100px;
+        opacity: 0
+    }
+    to {
+        bottom: 0px;
+        opacity: 1
+    }
+}
+
+@keyframes animatebottom {
+    from {
+        bottom: -100px;
+        opacity: 0
+    }
+    to {
+        bottom: 0;
+        opacity: 1
+    }
+}
+
+#myDiv {
+    display: none;
+}
+
 body {
     padding: 0;
     margin: 0;
     background: #FFF;
     font-family: 'Poppins', sans-serif;
+}
+
+.preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-color: #fff;
+}
+
+.preloader .loading {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font: 14px arial;
 }
 
 body button,
@@ -13,6 +105,29 @@ body a {
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
     -ms-transition: 0.5s all;
+}
+
+.rowtri {
+    display: flex;
+    justify-content: space-between;
+}
+
+.tri1,
+.tri2,
+.tri3 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 2);
+}
+
+.subtri {
+    margin-top: 30px;
+}
+
+.tri2 {
+    margin-left: 30px;
+}
+
+.tri3 {
+    margin-left: 30px;
 }
 
 .triDharma {
@@ -1117,6 +1232,7 @@ ul.team-socil-w3pvts li span:hover {
     -o-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
+    width: 100px;
 }
 
 .ab-content-inner {
@@ -1707,3 +1823,39 @@ button.btn-cont-w3 {
 
 
 /* //responsive */
+
+
+/* STYLE FOR FILOSOFI */
+
+section.filosofi-logo {
+    background-color: rgb(233, 233, 233);
+    padding: 20px;
+}
+
+div h1.capt-logo {
+    font-weight: bolder;
+    font-size: 25px;
+}
+
+div p.filosofi1 {
+    font-size: 17px;
+}
+
+section.filosofi-logo div.card h1 {
+    font-size: 20px;
+    font-weight: bolder;
+}
+
+div.card.p-4.ukuran {
+    height: 576px;
+}
+
+.for-shadow {
+    -webkit-box-shadow: 0px 11px 10px 1px rgba(58, 52, 82, 0.1);
+    -moz-box-shadow: 0px 11px 10px 1px rgba(58, 52, 82, 0.1);
+    box-shadow: 0px 11px 10px 1px rgba(58, 52, 82, 0.1);
+}
+
+img.white {
+    border: 1px solid grey;
+}
