--- a/css/style.css
+++ b/css/style.css
@@ -1116,6 +1116,16 @@ li.breadcrumb-item {
 
 
 /* team */
+.team-wrapper {
+    background-color: #fff;
+}
+
+.ab-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+}
 
 h4.text-team-w3 {
     font-size: 20px;
@@ -1159,21 +1169,9 @@ ul.team-socil-w3pvts li span:hover {
     -webkit-box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
     -moz-box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
     box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
-}
-
-.ab-content-inner-bawah {
-    padding: 3em;
+    width: 350x;
+    height: 290px;
     margin-top: 30px;
-    background: #fff;
-    -webkit-box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
-    -moz-box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
-    box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
-}
-
-.ab-content-inner-bawah-tengah {
-    padding: 3em;
-    margin-top: 30px;
-    margin-left: -90px;
 }
 
 
@@ -1407,6 +1405,35 @@ button.btn-cont-w3 {
 
 
 /* responsive */
+@media all and (max-width: 1000px) {
+    .team-wrapper {
+        margin: auto;
+    }
+
+    .ab-content {
+        margin: auto;
+    }
+
+    .ab-content-inner {
+       
+        margin: auto;
+    }
+    
+    .ab-info {
+        margin: auto;
+    }
+}
+
+@media all and (max-width: 670px) {
+    .ab-content {
+        margin: auto;
+        display: inline-block;
+    }
+
+    .ab-content-inner {
+        margin: auto;
+    }
+}
 
 @media(max-width: 1366px) {
     h3.w3ls_pvt-title {
