Menambahkan gambar, mengedit file filosofi.html, style.css, dan bootstrap.css

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3,6 +3,10 @@ div.card img.filosofi.card-img-top{
   width: 150px;
   margin: auto;
 }
+
+div.card.penggunaan{
+  height: 408px;
+}
 /*!
  * Bootstrap v4.0.0 (https://getbootstrap.com)
  * Copyright 2011-2018 The Bootstrap Authors
