--- a/css/style.css
+++ b/css/style.css
@@ -1510,6 +1510,7 @@ button.btn-cont-w3 {
 
 /* responsive */
 @media all and (max-width: 1000px) {
+    /* team */
     .team-wrapper {
         margin: auto;
     }
@@ -1529,6 +1530,7 @@ button.btn-cont-w3 {
 }
 
 @media all and (max-width: 670px) {
+    /* team */
     .ab-content {
         margin: auto;
         display: inline-block;
@@ -1537,6 +1539,7 @@ button.btn-cont-w3 {
     .ab-content-inner {
         margin: auto;
     }
+    
 }
 
 @media(max-width: 1366px) {
@@ -1899,7 +1902,7 @@ div.card.p-4.ukuran{
 .for-shadow{
     -webkit-box-shadow: 0px 11px 10px 1px rgba(58, 52, 82, 0.1);
     -moz-box-shadow: 0px 11px 10px 1px rgba(58, 52, 82, 0.1);
-    box-shadow: 0px 11px 10px 1px rgba(58, 52, 82, 0.1);
+    box-shadow: 0px 11px 10px 1px rgba(82, 82, 52, 0.1);
 }
 
 img.white{
