--- a/css/style.css
+++ b/css/style.css
@@ -168,9 +168,6 @@ body a {
 
 .icon {
     width: 140px;
-    position: center;
-    margin-bottom: 1ram;
-    position: static;
 }
 
 .mainName {
@@ -1223,6 +1220,16 @@ li.breadcrumb-item {
 
 
 /* team */
+.team-wrapper {
+    background-color: #fff;
+}
+
+.ab-info {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    text-align: center;
+}
 
 h4.text-team-w3 {
     font-size: 20px;
@@ -1266,21 +1273,9 @@ ul.team-socil-w3pvts li span:hover {
     -webkit-box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
     -moz-box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
     box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
-}
-
-.ab-content-inner-bawah {
-    padding: 3em;
+    width: 350x;
+    height: 290px;
     margin-top: 30px;
-    background: #fff;
-    -webkit-box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
-    -moz-box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
-    box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
-}
-
-.ab-content-inner-bawah-tengah {
-    padding: 3em;
-    margin-top: 30px;
-    margin-left: -90px;
 }
 
 
@@ -1514,6 +1509,38 @@ button.btn-cont-w3 {
 
 
 /* responsive */
+@media all and (max-width: 1000px) {
+    /* team */
+    .team-wrapper {
+        margin: auto;
+    }
+
+    .ab-content {
+        margin: auto;
+    }
+
+    .ab-content-inner {
+       
+        margin: auto;
+    }
+    
+    .ab-info {
+        margin: auto;
+    }
+}
+
+@media all and (max-width: 670px) {
+    /* team */
+    .ab-content {
+        margin: auto;
+        display: inline-block;
+    }
+
+    .ab-content-inner {
+        margin: auto;
+    }
+    
+}
 
 @media(max-width: 1366px) {
     h3.w3ls_pvt-title {
@@ -1875,33 +1902,10 @@ div.card.p-4.ukuran{
 .for-shadow{
     -webkit-box-shadow: 0px 11px 10px 1px rgba(58, 52, 82, 0.1);
     -moz-box-shadow: 0px 11px 10px 1px rgba(58, 52, 82, 0.1);
-    box-shadow: 0px 11px 10px 1px rgba(58, 52, 82, 0.1);
-}
-
-.for-shadow-dark{
-    -webkit-box-shadow: 0px 11px 10px 1px rgba(255, 255, 255, 0.829);
-    -moz-box-shadow: 0px 11px 10px 1px rgba(255, 255, 255, 0.829);
-    box-shadow: 0px 11px 10px 1px rgba(255, 255, 255, 0.829);
+    box-shadow: 0px 11px 10px 1px rgba(82, 82, 52, 0.1);
 }
 
 img.white{
     border: 1px solid grey;
 }
 
-section.konstruksi-logo .row.mt-4{
-    height: 400px;
-}
-
-.card-img-top.ukuran-logo{
-    width: 50%;
-    margin: auto;
-}
-
-section.konstruksi-logo .col-md-4 img{
-    margin: auto;
-}
-
-.card-img-top.alternatif{
-    width: 40%;
-    margin: auto;
-}
