--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1,3 +1,13 @@
+/* css nya kontak html  bootsrap.css */
+ #contact .col-sm-12,.col-lg-7 {
+  position: relative;
+  min-height: 1px;
+}
+#contact-main .py-5 {
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+}
+
 /* Tambahan Filosofi */
 div.card img.filosofi.card-img-top{
   width: 150px;
