Mengedit margin pada deskripsi warna

--- a/css/style.css
+++ b/css/style.css
@@ -2019,8 +2019,8 @@ div.card.p-4.ukuran{
 
 div.deskripsi-warna{
     display: inline-block;
-    margin-left: 20px;
-
+    margin-left: 10px;
+}
 section.konstruksi-logo .row.mt-4{
     height: 400px;
 }
