--- a/css/style.css
+++ b/css/style.css
@@ -245,19 +245,50 @@ body a {
     box-shadow: 5px 7px 23px 0px rgba(58, 52, 82, 0.16);
 }
 
-.subtri{
+.teks {
+    padding: 10px;
+}
+
+.tri-wrapper {
+    margin: 0px;
+}
+
+.tri-items h3 {
+    padding: 20px;
+}
+
+.teks p {
+    font-size: 14px;
+    letter-spacing: 1px;
+}
+
+/* .subtri{
     margin-top: 30px;
+} */
+#why {
+    margin: 0;
 }
-.tri2{
-    margin-left: 30px;
+
+div.card.p-4.size{
+    height: 700px;
 }
-.tri3{
-    margin-left: 30px;
+
+.icon-tri {
+    top: 0px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
+}
+
+
+.icon-tri-wrapper{
+    margin-top: -30px;
+    padding: 0px;
+    position: relative;
 }
 
 .triDharma {
-    margin-top: -90px;
-    margin-bottom: 60px;
+    margin-bottom: 0px;
 }
 
 .angka {
@@ -1627,6 +1658,36 @@ button.btn-cont-w3 {
     .ab-info {
         margin: auto;
     }
+
+    /* Tri Dharma */
+    .tri-item {
+        margin: auto;
+    }
+
+    h4.subtri {
+        font-size: 15px !important;
+    }
+
+    div.card.p-4.size{
+        height: 700px;
+        padding: 20px 10px !important;
+    }
+    .icon-tri {
+        position: absolute;
+        right: 0px;
+        top: 0px;
+    }
+    
+    
+    .icon-tri-wrapper{
+        margin-top: -50px;
+        position: relative;
+    }
+
+    .tri-box {
+        margin-top: 20px !important;
+    }
+
 }
 
 @media all and (max-width: 670px) {
@@ -1638,6 +1699,36 @@ button.btn-cont-w3 {
 
     .ab-content-inner {
         margin: auto;
+    }
+
+    /* Tri Dharma */
+
+    div.card.p-4.size{
+        height: fit-content;
+    }
+
+    .icon-tri-wrapper {
+        margin: auto;
+        text-align: center;
+        box-sizing: border-box;
+        position: unset;
+    }
+
+    .icon-tri{
+        margin: auto;
+        text-align: center;
+        position: unset;
+    }
+
+    .teks {
+        text-align: center;
+    } 
+    .tri-item {
+        text-align: center;
+    }
+
+    .tri-items h3 {
+        font-size: 20px;
     }
     
 }
@@ -2030,7 +2121,7 @@ section.konstruksi-logo .row.mt-4{
     margin: auto;
 }
 
-section.konstruksi-logo .col-md-4 img{
+section.konstruksi-logo img{
     width: 250px;
     margin: auto;
 }
